# fileScanner

./: CMakeLists.txt  main.cpp  readme.md  scanner.cpp  scanner.hpp
.github/workflows/: build.yml
